@@ -1051,7 +1051,27 @@ static void InputWidgetLeft(const ScreenCoordsXY& screenCoords, rct_window* w, W
         case WindowWidgetType::Scroll:
             InputScrollBegin(*w, widgetIndex, screenCoords);
             break;
-        default:
+        case WindowWidgetType::Empty:
+        case WindowWidgetType::LabelCentred:
+        case WindowWidgetType::Label:
+        case WindowWidgetType::Groupbox:
+        case WindowWidgetType::Placeholder:
+        case WindowWidgetType::Last:
+            // Non-interactive widget type
+            break;
+        case WindowWidgetType::ImgBtn:
+        case WindowWidgetType::ColourBtn:
+        case WindowWidgetType::TrnBtn:
+        case WindowWidgetType::Tab:
+        case WindowWidgetType::FlatBtn:
+        case WindowWidgetType::Button:
+        case WindowWidgetType::TableHeader:
+        case WindowWidgetType::Spinner:
+        case WindowWidgetType::DropdownMenu:
+        case WindowWidgetType::CloseBox:
+        case WindowWidgetType::Checkbox:
+        case WindowWidgetType::TextBox:
+        case WindowWidgetType::Custom:
             if (!WidgetIsDisabled(*w, widgetIndex))
             {
                 OpenRCT2::Audio::Play(OpenRCT2::Audio::SoundId::Click1, 0, w->windowPos.x + widget.midX());
